hphp/test/slow/hashbang_double.php.expectf
Fatal error: A .php file must begin with '<?hh'. in %s/test/slow/hashbang_double.php on line 1